k8s.yml
apiVersion: v1
kind: Namespace
metadata:
  name: webrtc
---
apiVersion: v1
kind: Service
metadata:
  name: webrtc-web-svc
  namespace: webrtc
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: webrtc-web-svc
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webrtc-web-deb
  namespace: webrtc
spec:
  selector:
    matchLabels:
      app: webrtc-web-svc
  template:
    metadata:
      labels:
        app: webrtc-web-svc
    spec:
      containers:
        - image: docker.io/manimaul/webrtc:latest
          name: webrtc-web-svc
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 100m
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    haproxy.org/server-ssl: "false"
    haproxy.org/ssl-redirect: "true"
    haproxy.org/auth-type: basic-auth
    haproxy.org/auth-secret: webrtc/webrtc-credentials

  generation: 7
  name: webrtcingress
  namespace: webrtc
spec:
  rules:
    - host: willkamp.com
      http:
        paths:
          - backend:
              service:
                name: webrtc-web-svc
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
    - host: www.willkamp.com
      http:
        paths:
          - backend:
              service:
                name: webrtc-web-svc
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - willkamp.com
        - www.willkamp.com
      secretName: webrtc-cert
---
#kubectl -n webrtc create secret generic webrtc-credentials \
#--from-literal=${USER}=$(openssl passwd -1 ${PASS})
